--- a/Home.css
+++ b/Home.css
@@ -6,7 +6,7 @@ h1 {
   font-family: arial;
   font-weight: 400;
   font-style: italic;
-  color: #333;
+  color: white;
 }
 
 html {
@@ -19,7 +19,7 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
 }
 
 .topnav {
