Fixed img src, centered sub headline, and made backgroud blue.

--- a/home.css
+++ b/home.css
@@ -1,11 +1,16 @@
 body {
   margin: 0;
+  background-color: blue;
 }
 
 .headline {
   margin: auto;
 }
 
-.evidence {
+.sub {
+  margin: auto;
+}
+
+#evidence {
   margin: auto;
 }
