--- a/home.css
+++ b/home.css
@@ -1,14 +1,16 @@
 .headline {
-  margin: auto;
-  background-color: green;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .sub {
-  margin: 50px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #evidence {
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
   width: 400px;
   height: auto;
 }
