--- a/home.css
+++ b/home.css
@@ -1,11 +1,9 @@
 .headline {
-  margin-left: auto;
-  margin-right: auto;
+  text-align: center;
 }
 
 .sub {
-  margin-left: auto;
-  margin-right: auto;
+  text-align: center;
 }
 
 #evidence {
