--- a/home.css
+++ b/home.css
@@ -1,15 +1,14 @@
-.headline {
-  text-align: center;
+html {
+  margin: 0;
 }
 
-.sub {
-  text-align: center;
+body {
+  margin: 0;
 }
 
-#evidence {
+.deer_background {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 400px;
-  height: auto;
+  margin: 0 auto;
+  height: 50%;
+  width: 70%;
 }
