--- a/home.css
+++ b/home.css
@@ -4,11 +4,29 @@ html {
 
 body {
   margin: 0;
+  background: white;
 }
 
 .deer_background {
   display: block;
   margin: 0 auto;
-  height: 50%;
-  width: 80%;
+  width: 70%;
+}
+
+#color_button {
+  display: block;
+  background-color: #0080ff;
+  color: white;
+  padding: 15px 25px;
+  border: none;
+  border-radius: 4px;
+  text-align: center;
+  margin: 20px auto 0;
+  cursor: pointer;
+  transition-duration: 0.4s;
+}
+
+#color_button:hover {
+  background-color: #1a8cff;
+  box-shadow: 0 2px 3px #888888;
 }
