--- a/home.css
+++ b/home.css
@@ -21,7 +21,7 @@ body {
   border: none;
   border-radius: 4px;
   text-align: center;
-  margin: 20px auto 0;
+  margin: 0 auto;
   cursor: pointer;
   transition-duration: 0.4s;
 }
