--- a/home.css
+++ b/home.css
@@ -22,6 +22,7 @@ body {
   border-radius: 4px;
   text-align: center;
   margin: 0 auto;
+  outline: none;
   cursor: pointer;
   transition-duration: 0.4s;
 }
