--- a/home.css
+++ b/home.css
@@ -4,24 +4,89 @@ html {
 
 body {
   margin: 0;
-  background: white;
+  background-color: #ffaa80;
 }
 
-.deer_background {
+.sidebar {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  -ms-overflow-style: none;
+}
+
+#tunes iframe {
+  height: 99%;
+  width: 100%;
+  overflow-x: hidden;
+}
+
+.sidebar::-webkit-scrollbar {
+  display: none;
+}
+
+@media screen and (max-height: 450px) {
+  .sidebar {padding-top: 15px;}
+  .sidebar a {font-size: 18px;}
+}
+
+#main {
+  transition: margin-left .5s;
+}
+
+#sidebuttons {}
+
+.openbtn {
+  position: absolute;
+  left: -80px;
+  transition: 0.5s;
+  width: 100px;
+  text-decoration: none;
+  font-size: 20px;
+  cursor: pointer;
+  background-color: #0099ff;
+  color: white;
+  padding: 15px;
+  border-radius: 0 5px 5px 0;
+  border: none;
+  outline: none;
+}
+
+.openbtn:hover {
+  left: 0;
+  opacity: 0.8;
+}
+
+#tunesbtn {
+  top: 20px;
+}
+
+#colorsbtn {
+  top: 80px;
+}
+
+#deer_background {
   display: block;
   margin: 0 auto;
-  width: 70%;
+  width: 80%;
 }
 
-#color_button {
+/* #color_button {
   display: block;
+  position: fixed;
+  z-index: 99;
   background-color: #0080ff;
   color: white;
   padding: 15px 25px;
   border: none;
   border-radius: 4px;
   text-align: center;
-  margin: 0 auto;
+  margin-top: ;
   outline: none;
   cursor: pointer;
   transition-duration: 0.4s;
@@ -30,4 +95,4 @@ body {
 #color_button:hover {
   background-color: #1a8cff;
   box-shadow: 0 2px 3px #888888;
-}
+} */
