--- a/home.css
+++ b/home.css
@@ -7,10 +7,14 @@ body {
   /* background-color: #ffaa80; */
 }
 
-.center {
+.image_center {
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+.text_center {
+  text-align: center;
 }
 
 /* 
