--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -62,6 +62,24 @@ textarea {
   color: var(--color-white);
 }
 
+/* =============== CONTACT SOCIALS ============== */
+.contact__socials {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 0.8rem;
+  position: absolute;
+  left: 0;
+  bottom: 3rem;
+}
+
+.contact__socials::after {
+  content: "";
+  width: 1px;
+  height: 2rem;
+  background: var(--color-primary);
+}
+
 /* ================ MEDIA QUERIES (MEDIUM DEVICES) ================= */
 @media screen and (max-width: 1024px) {
   .container.contact__container {
